Increase Java memory allocation and PermGen space for JBoss